syntax = "proto3";

option csharp_namespace = "Baka.Hipster.Burger.Shared.Protos";

package shared;

import "Protos/common.proto";

service ArticleProto {
	rpc Add (ArticleMessage) returns (IdMessage);
	rpc Delete (IdMessage) returns (BoolResponse);
	rpc CanDelete (IdMessage) returns (BoolResponse);
	rpc Update (ArticleMessage) returns (BoolResponse);
	rpc Get (IdMessage) returns (ArticleMessage);
	rpc GetAll (Empty) returns (ArticleMessages);
}