syntax = "proto3";

option csharp_namespace = "Baka.Hipster.Burger.Shared.Protos";

package shared;

import "Protos/common.proto";

service EmployeeProto {
	rpc Add (EmployeeMessage) returns (IdMessage);
	rpc Delete (IdMessage) returns (BoolResponse);
	rpc CanDelete (IdMessage) returns (BoolResponse);
	rpc Update (EmployeeMessage) returns (BoolResponse);
	rpc Get (IdMessage) returns (EmployeeMessage);
	rpc GetAll (Empty) returns (EmployeeMessages);
}