syntax = "proto3";

option csharp_namespace = "Baka.Hipster.Burger.Shared.Protos";

package shared;

import "Protos/common.proto";

service OrderProto {
	rpc Add (OrderMessageRequest) returns (IdMessage);
	rpc Delete (IdMessage) returns (BoolResponse);
	rpc Update (OrderMessageRequest) returns (BoolResponse);
	rpc Get (IdMessage) returns (OrderMessageResponse);
	rpc GetAll (Empty) returns (OrderMessageResponses);
}